manual-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: argo-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
