manual-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo-demo-route
  namespace: argo-demo
spec:
  host: nginx-route-argo-demo.apps-crc.testing
  port:
    targetPort: http
  tls:
    termination: passthrough
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
